--- a/scss/partials/_cards.scss
+++ b/scss/partials/_cards.scss
@@ -48,7 +48,7 @@
 
         .list-group-item{
             background-color: black;
-            color:white;
+            color:black;
             font-family: 'Bebas Neue', cursive;
             text-align: center;
         }
@@ -85,6 +85,6 @@
     .card-text-ubi {
         text-align: center;
         font-family: 'Bebas Neue', cursive;
-        color:white;
+        color:black;
     }
 }
