--- a/scss/partials/_form.scss
+++ b/scss/partials/_form.scss
@@ -16,7 +16,7 @@
     font-size: 120%;
 
     &:hover {
-    background-color: white;
+    background-color: black;
     border:3px solid #923431B0;
     }
 
